Fix spacing on locations

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -80,6 +80,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 32px 8px 0;
+    justify-content: space-around;
 }
 
 .location {
